Fix positioning of help modal on mobile

--- a/index.css
+++ b/index.css
@@ -182,6 +182,7 @@ h1, h2, h3 {
 
 /* style for the help modal */
 .help-modal {
+  top: 400px;
   max-width: 400px;
   border-width: 4px;
   border-style: groove;
